--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,33 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.techjany.abcbuilders.MainActivity">
 
-    <android.support.design.widget.AppBarLayout
+    <LinearLayout
+        android:weightSum="100"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+
+
+        <LinearLayout
+            android:layout_marginTop="15dp"
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:layout_weight="28"
+            android:weightSum="10"
+            android:layout_height="0dp">
 
-    </android.support.design.widget.AppBarLayout>
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:id="@+id/inputLauout"
+                android:layout_weight="5"
+                android:layout_height="wrap_content" >
 
-    <include layout="@layout/content_main" />
+                <EditText
+                    android:layout_margin="20dp"
+                    android:id="@+id/emailET"
+                    android:hint="Email"
+                    android:textColorHint="#f57c00"
+                    android:layout_width="match_parent"
+                    android:backgroundTint="#f57c00"
+                    android:layout_height="wrap_content"
+                    android:inputType="textEmailAddress" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+            </android.support.design.widget.TextInputLayout>
 
-</android.support.design.widget.CoordinatorLayout>
+
+
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:id="@+id/inputLauout2"
+                android:layout_weight="5"
+                android:layout_height="wrap_content" >
+
+                <EditText
+                    android:id="@+id/passET"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="20dp"
+                    android:hint="Password"
+                    android:inputType="textPassword" />
+            </android.support.design.widget.TextInputLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_weight="15"
+            android:layout_height="0dp">
+
+            <Button
+                android:id="@+id/button"
+                android:text="Sign In"
+                android:onClick="buttonClick"
+                android:textColor="#FFFF"
+                android:background="#ff9800"
+                android:layout_margin="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+
+</RelativeLayout>
