--- a/app/src/main/res/layout/activity_contact_us.xml
+++ b/app/src/main/res/layout/activity_contact_us.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#37474F"
-    tools:context="com.techjany.abcbuilders.ContactUS">
+    tools:context="com.techjany.abcbuilders.SQlite.ContactUS">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
