--- a/app/src/main/res/layout/content_gallery.xml
+++ b/app/src/main/res/layout/content_gallery.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.techjany.abcbuilders.Gallery"
+    tools:context="com.techjany.abc.Gallery"
     tools:showIn="@layout/activity_gallery">
 
    <LinearLayout
@@ -32,7 +32,6 @@
                    android:scaleType="centerCrop"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
-                   android:background="@drawable/bed"
                    android:layout_height="0dp" />
                <TextView
                    android:text="Bed Room"
