--- a/app/src/main/res/layout/content_navigation.xml
+++ b/app/src/main/res/layout/content_navigation.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:padding="20dp"
     android:layout_height="match_parent"
-    tools:context="com.techjany.abcbuilders.Navigation"
+    tools:context="com.techjany.abc.Navigation"
     tools:showIn="@layout/app_bar_navigation">
 
     <ImageView
@@ -27,7 +27,7 @@
         android:layout_marginBottom="5dp"
         android:layout_marginTop="36dp"
         android:background="#000000"
-        android:text="View Gallery"
+        android:text="Gallery(Glide)"
         android:textColor="#FFFFFF" />
 
     <Button
@@ -49,7 +49,7 @@
         android:layout_below="@+id/btnLocation"
         android:layout_marginBottom="5dp"
         android:background="#000000"
-        android:text="Testimonials"
+        android:text="Get Data With Retrofit"
         android:textColor="#FFFFFF" />
 
     <Button
@@ -59,6 +59,6 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/btnTestimonials"
         android:background="#000000"
-        android:text="Contact Us"
+        android:text="SQLite CRUD Operation"
         android:textColor="#FFFFFF" />
 </RelativeLayout>
