--- a/app/src/main/res/menu/menu_testimonials.xml
+++ b/app/src/main/res/menu/menu_testimonials.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.techjany.abcbuilders.Retrofit.activity.Testimonials">
+    tools:context="com.techjany.abc.Retrofit.activity.RetrofitPractice">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
