--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
                 <EditText
                     android:layout_margin="20dp"
                     android:id="@+id/emailET"
-                    android:hint="Email"
+                    android:hint="User Name"
                     android:textColorHint="#f57c00"
                     android:layout_width="match_parent"
                     android:backgroundTint="#f57c00"
@@ -72,15 +72,39 @@
                 android:id="@+id/button"
                 android:text="Sign In"
                 android:onClick="buttonClick"
-                android:textColor="#FFFF"
-                android:background="#ff9800"
+                android:textColor="#FFFFFF"
+                android:background="#000000"
                 android:layout_margin="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:textColor="#FF0000"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="User Name: admin" />
+
+            <TextView
+                android:textColor="#FF0000"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Pass: admin" />
+
+        </LinearLayout>
+
+
     </LinearLayout>
+
 
 
 </RelativeLayout>
