--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,49 +7,24 @@
     tools:context="com.techjany.abc.MainActivity">
 
     <LinearLayout
-        android:weightSum="100"
         android:orientation="vertical"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
 
 
-
-        <LinearLayout
-            android:layout_marginTop="15dp"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_weight="28"
-            android:weightSum="10"
-            android:layout_height="0dp">
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:id="@+id/inputLauout"
-                android:layout_weight="5"
-                android:layout_height="wrap_content" >
-
                 <EditText
-                    android:layout_margin="20dp"
                     android:id="@+id/emailET"
-                    android:hint="User Name"
-                    android:textColorHint="#f57c00"
                     android:layout_width="match_parent"
-                    android:backgroundTint="#f57c00"
                     android:layout_height="wrap_content"
-                    android:inputType="textEmailAddress" />
+                    android:layout_margin="20dp"
+                    android:backgroundTint="#000000"
+                    android:hint="User Name"
+                    android:inputType="textEmailAddress"
+                    android:textColorHint="#000000" />
 
-            </android.support.design.widget.TextInputLayout>
-
-
-
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:id="@+id/inputLauout2"
-                android:layout_weight="5"
-                android:layout_height="wrap_content" >
 
                 <EditText
                     android:id="@+id/passET"
@@ -57,16 +32,11 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="20dp"
                     android:hint="Password"
+                    android:textColorHint="#000000"
                     android:inputType="textPassword" />
-            </android.support.design.widget.TextInputLayout>
 
-        </LinearLayout>
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_weight="15"
-            android:layout_height="0dp">
+
 
             <Button
                 android:id="@+id/button"
@@ -78,13 +48,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
-        </LinearLayout>
 
-        <LinearLayout
-            android:layout_marginTop="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
 
             <TextView
                 android:textColor="#FF0000"
@@ -99,8 +63,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Pass: admin" />
-
-        </LinearLayout>
 
 
     </LinearLayout>
